test/extern/PointerToEmpty.good

PointerToEmpty.chpl:7: error: halt reached - Can’t take a C pointer to an array with 0 elements.
